[package]
name = "solana_farm"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-program = "1.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
base64 = "0.21"
flate2 = "1.0"
rand = "0.8"
aes-gcm = "0.10.3"
argon2 = "0.5"
hex= "0.4"